point constructs from cell

--- a/source/point/CMakeLists.txt
+++ b/source/point/CMakeLists.txt
@@ -1,6 +1,11 @@
 #creating new library
 add_library(point point.cpp)
 
+# linking included libraries
+target_link_libraries(point
+  cell
+)
+
 # importing include directory
 target_include_directories(point
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
